--- a/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
+++ b/app/Resources/FOSUserBundle/views/Security/login_content.html.twig
@@ -16,26 +16,30 @@
                     <input type="hidden" name="_csrf_token" value="{{ csrf_token }}"/>
                 {% endif %}
 
-                <img src="{{ asset('img/logo_dkj.jpg') }}" class="img-responsive" alt=""/>
+                <div class="form-group">
+                    <label for="username">
+                        <i class="fa fa-user" aria-hidden="true"></i> {{ 'security.login.username'|trans }}
+                    </label>
+                    <input type="text" class="form-control no-border-radius" id="username" name="_username"
+                           value="{{ last_username }}" required="required"/>
+                </div>
 
-                <label for="username">
-                    <i class="fa fa-user" aria-hidden="true"></i> {{ 'security.login.username'|trans }}
-                </label>
-                <input type="text" class="form-control input-lg no-border-radius" id="username" name="_username"
-                       value="{{ last_username }}" required="required"/>
-
+                <div class="form-group">
                 <label for="password">
                     <i class="fa fa-lock" aria-hidden="true"></i> {{ 'security.login.password'|trans }}
                 </label>
-                <input type="password" id="password" class="form-control input-lg no-border-radius" name="_password"
+                <input type="password" id="password" class="form-control no-border-radius" name="_password"
                        required="required"/>
+                </div>
+                <div class="form-group">
 
-                <input type="submit" class="btn btn-lg btn-primary btn-block no-border-radius" id="_submit" name="_submit"
+                <input type="submit" class="btn btn-primary btn-block no-border-radius" id="_submit" name="_submit"
                        value="{{ 'security.login.submit'|trans }}"/>
+                </div>
             </form>
 
             <div class="form-links">
-                <a href="{{ path('front.index') }}">На главную</a>
+                Nie masz konta? <a href="{{ path('register') }}">Zarejestruj się</a>
             </div>
         </section>
     </div>
