--- a/app/Resources/views/default/parts/header.html.twig
+++ b/app/Resources/views/default/parts/header.html.twig
@@ -1,18 +1,8 @@
 <nav class="navbar">
     <div class="container" style="padding: 0">
         <ul class="nav navbar-nav">
-            <li class="active"><a href="{{ path('index') }}">Home</a></li>
-            <li class="dropdown">
-                <a class="dropdown-toggle" data-toggle="dropdown" href="#">Page 1
-                    <span class="caret"></span></a>
-                <ul class="dropdown-menu">
-                    <li><a href="#">Page 1-1</a></li>
-                    <li><a href="#">Page 1-2</a></li>
-                    <li><a href="#">Page 1-3</a></li>
-                </ul>
-            </li>
-            <li><a href="#">Page 2</a></li>
-            <li><a href="#">Page 3</a></li>
+            <li class="active"><a href="{{ path('index') }}">Główna</a></li>
+            <li><a href="{{ path('categories') }}">Kategorie</a></li>
         </ul>
 
         <ul class="nav navbar-nav navbar-right">
@@ -20,22 +10,26 @@
             <li><a href="{{ path('add') }}">Dodaj</a></li>
 
             {% if user is null %}
-            <li>
-                <a href="{{ path('register') }}">
-                    <span class="glyphicon glyphicon-user"></span> Rejestracja
-                </a>
-            </li>
-            <li>
-                <a href="{{ path('fos_user_security_login') }}">
-                    <span class="glyphicon glyphicon-log-in"></span> Logowanie
-                </a>
-            </li>
-                {% else %}
-                    <li>
-                        <a href="{{ path('fos_user_security_logout') }}">
-                            <span class="glyphicon glyphicon-log-in"></span> Witaj, {{ user.username }}! Wyłoguj
-                        </a>
-                    </li>
+                <li>
+                    <a href="{{ path('register') }}">
+                        <span class="glyphicon glyphicon-user"></span> Rejestracja
+                    </a>
+                </li>
+                <li>
+                    <a href="{{ path('fos_user_security_login') }}">
+                        <span class="glyphicon glyphicon-log-in"></span> Logowanie
+                    </a>
+                </li>
+            {% else %}
+                <p class="navbar-text">
+                    Witaj, {{ user.username }}!
+                </p>
+
+                <li>
+                    <a href="{{ path('fos_user_security_logout') }}">
+                        <span class="glyphicon glyphicon-log-in"></span> Wyłoguj
+                    </a>
+                </li>
             {% endif %}
         </ul>
     </div>
